Remove faulty test tag, improve other test tag, fix comments